tests/ui/issues/issue-40000.stderr
error[E0308]: mismatched types
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^ one type is more general than the other
   |
   = note: expected trait object `dyn for<'a> Fn(&'a i32)`
              found trait object `dyn Fn(&i32)`

error[E0308]: mismatched types
  --> $DIR/issue-40000.rs:6:9
   |
LL |     foo(bar);
   |         ^^^ one type is more general than the other
   |
   = note: expected trait object `dyn for<'a> Fn(&'a i32)`
              found trait object `dyn Fn(&i32)`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
